--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,228 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+ @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+ :root {
+   --dark-bg-color: hsl(209, 26%, 17%);
+   --article-color: hsl(209, 23%, 22%);
+   --text-color: hsl(0, 0%, 100%);
+   --light-mode-text: hsl(200, 15%, 8%);
+   --light-mode-input: hsl(0, 0%, 52%);
+   --light-mode-background: hsl(0, 0%, 98%);
+ }
+
+
+
+ * {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+ }
+
+ body {
+  height: 100vh;
+  width: 100vw;
+   font-family: "Segoe UI", "Roboto", "Oxygen",
+     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+     sans-serif;
+ }
+
+
+ .dark-background {
+   background-color: hsl(207, 26%, 17%);
+ }
+
+ .dark-elements {
+   background-color: hsl(209, 23%, 22%);
+ }
+
+ .dark-text {
+   color: hsl(0, 0%, 100%);
+ }
+
+ .light-text {
+   color: hsl(200, 15%, 8%);
+ }
+
+ .light-input {
+   background-color: hsl(0, 0%, 52%);
+ }
+
+ .light-background {
+   background-color: hsl(0, 0%, 98%);
+ }
+
+ .light-elements {
+   background-color: hsl(0, 0%, 100%);
+ }
+
+
+ /* Navbar */
+ .navbar {
+   height: 70px;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+
+ }
+
+ .heading {
+   padding-left: 111px;
+   font-weight: bolder;
+ }
+
+ .mode {
+   padding-right: 130px;
+ }
+
+ /* search bar */
+ .search {
+   width: 40rem;
+   border-radius: 5px;
+   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+ }
+
+ .search>input[type="text"] {
+   width: 20rem;
+   height: 45px;
+   padding: 10px;
+   border: none;
+   outline: none;
+   border-radius: 5px;
+ }
+
+ .search>input[type="text"]::placeholder {
+   color: var(--light-mode-text);
+ }
+
+ /* filter / select */
+ .filter {
+   height: 80px;
+   width: 100%;
+   display: flex;
+   align-items: center;
+ }
+
+ .select>select {
+   height: 45px;
+   width: 300px;
+   padding: 0 10px;
+   border-radius: 5px;
+   border: none;
+   outline: none;
+   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+ }
+
+ /* cards  */
+ .card {
+   height: 400px;
+   width: 300px;
+   margin: 10px 10px;
+   border-radius: 5px 5px;
+   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+ }
+
+ .img>img {
+   height: 200px;
+   width: 300px;
+   border-radius: 5px 5px 0 0;
+ }
+
+ .grid {
+   margin: 0 100px;
+   display: grid;
+   grid-template-columns: repeat(4, auto);
+ }
+
+ .content {
+   display: flex;
+   margin: 15px 15px;
+ }
+
+ .info>div {
+   margin: 13px;
+ }
+
+
+ /* particular card info */
+ .infoC {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+ }
+
+ /* back button */
+
+ .backBtn {
+   margin-left: 10px;
+   background-color: rgb(202, 199, 199);
+   color: white;
+   width: 60px;
+   height: 30px;
+   text-decoration: none;
+ }
+
+ .backBtn:hover {
+   background-color: white;
+ }
+
+ @media only screen and (max-width: 415px) {
+   .navbar {
+     margin: 0 50px;
+     width: 300px;
+   }
+
+   .heading {
+     padding-left: 14px;
+   }
+
+   .search {
+     margin: 20px 50px;
+     margin-top: 20px;
+     width: 18.6rem;
+     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+   }
+
+   .search>input[type="text"] {
+     width: 270px;
+   }
+
+   .filter {
+     height: 40px;
+     margin: 10px 0;
+   }
+
+   .select>select {
+     width: 300px;
+     margin-left: 50px;
+   }
+
+   .grid {
+     display: grid;
+     margin: 0 41px;
+     grid-template-columns: repeat(1, auto);
+   }
+
+   .mode {
+     padding-right: 17px;
+   }
+
+ }
+
+ @media only screen and (min-width: 420px) {
+   .search>input[type="text"] {
+     width: 40rem;
+   }
+
+   .search {
+     margin-top: 10px;
+     margin-left: 110px;
+   }
+
+   .select>select {
+     width: 20rem;
+     height: 45px;
+     margin: 0 110px;
+   }
+
+ }
