--- a/src/index.css
+++ b/src/index.css
@@ -27,28 +27,28 @@
 
 
  .dark-background {
-   background-color: hsl(207, 26%, 17%);
+   background-color: hsl(209, 26%, 17%);
  }
+ .light-background {
+  background-color: hsl(0, 0%, 98%);
+}
 
- .dark-elements {
-   background-color: hsl(209, 23%, 22%);
+ .light-text {
+  color: hsl(200, 15%, 8%);
  }
 
  .dark-text {
    color: hsl(0, 0%, 100%);
  }
 
- .light-text {
-   color: hsl(200, 15%, 8%);
- }
-
  .light-input {
    background-color: hsl(0, 0%, 52%);
  }
 
- .light-background {
-   background-color: hsl(0, 0%, 98%);
+ .dark-elements {
+  background-color: hsl(209, 26%, 17%);
  }
+ 
 
  .light-elements {
    background-color: hsl(0, 0%, 100%);
@@ -58,6 +58,7 @@
  /* Navbar */
  .navbar {
    height: 70px;
+   width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
@@ -76,7 +77,7 @@
 
  /* search bar */
  .search {
-   width: 40rem;
+   width: 40%;
    border-radius: 5px;
    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
  }
@@ -114,17 +115,20 @@
 
  /* cards  */
  .card {
-   height: 400px;
+   height: 365px;
    width: 300px;
    margin: 10px 10px;
    border-radius: 5px 5px;
    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+   overflow: hidden;
+   
  }
 
  .img>img {
    height: 200px;
    width: 300px;
    border-radius: 5px 5px 0 0;
+   /* border: 1px solid red; */
  }
 
  .grid {
@@ -132,15 +136,19 @@
    display: grid;
    grid-template-columns: repeat(4, auto);
  }
+ 
 
- .content {
+ .info h3 {
    display: flex;
    margin: 15px 15px;
+   
  }
 
  .info>div {
    margin: 13px;
+   
  }
+ 
 
 
  /* particular card info */
@@ -168,61 +176,116 @@
 
  @media only screen and (max-width: 415px) {
    .navbar {
-     margin: 0 50px;
-     width: 300px;
+     margin: 0;
+     width: 100vw;
+   }
+   .hid{
+    display: none;
    }
 
    .heading {
-     padding-left: 14px;
+     padding-left: 34px;
    }
+   
 
    .search {
-     margin: 20px 50px;
-     margin-top: 20px;
-     width: 18.6rem;
+     width: 80vw;
+     margin: 20px 35px;
      box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
    }
 
    .search>input[type="text"] {
-     width: 270px;
+     width: 100%;
    }
 
    .filter {
      height: 40px;
-     margin: 10px 0;
+     margin: 20px 0;
    }
 
    .select>select {
-     width: 300px;
-     margin-left: 50px;
+     width: 80vw;
+     margin-left: 35px;
+
    }
 
    .grid {
      display: grid;
-     margin: 0 41px;
+     justify-content: center;
+     align-items: center;
+
+     /* margin: 0 20.3px; */
      grid-template-columns: repeat(1, auto);
    }
 
    .mode {
-     padding-right: 17px;
+     padding-right: 45px;
    }
 
  }
 
- @media only screen and (min-width: 420px) {
-   .search>input[type="text"] {
-     width: 40rem;
-   }
+ /* @media only screen and (min-width: 420px) { */
+  
+   
+  @media (min-width: 416px) {
+    .search>input[type="text"] {
+      width: 40rem;
+    }
+ 
+    .search {
+      margin-top: 10px;
+      margin-left: 110px;
+    }
+ 
+    .select>select {
+      width: 20rem;
+      height: 45px;
+      margin: 0 110px;
+    }
+    .grid { grid-template-columns: repeat(2, 1fr); }
+  }
 
-   .search {
-     margin-top: 10px;
-     margin-left: 110px;
-   }
+  @media (min-width: 900px) {
+    .search>input[type="text"] {
+      width: 40rem;
+    }
+ 
+    .search {
+      margin-top: 10px;
+      margin-left: 110px;
+    }
+ 
+    .select>select {
+      width: 20rem;
+      height: 45px;
+      margin: 0 110px;
+    }
+    .grid { grid-template-columns: repeat(3, 1fr); }
+  }
+  @media (min-width: 1100px) {
+    .search>input[type="text"] {
+      width: 40rem;
+    }
+ 
+    .search {
+      margin-top: 10px;
+      margin-left: 110px;
+    }
+ 
+    .select>select {
+      width: 20rem;
+      height: 45px;
+      margin: 0 110px;
+    }
+    .grid { grid-template-columns: repeat(4, 1fr); }
+  }
 
-   .select>select {
-     width: 20rem;
-     height: 45px;
-     margin: 0 110px;
-   }
+ 
 
- }
+
+
+
+ html{
+  width: 100%;
+  height: 100%;
+}
